tests/paczka1/fuzzy1/35227696.err
Error in line 1: 9GmQf S798 98,2
Error in line 15: ALAq S798 62,1
Error in line 24: xfk3uR S626 -2,8
Error in line 23: tBw0AzrD8p6 A126 93,9
Error in line 27: A545 S798 2_,7
Error in line 20: A545 A126 99,6
Error in line 22: ALAq A545 88,2
Error in line 10: 9GmQf A545 34,0
